@@ -1,3 +1,3 @@
-confdb.version=V03-02-03
+confdb.version=V03-02-04
 confdb.contact=sandro.ventura@cern.ch
 confdb.url=https://confdb.web.cern.ch/confdb/v3/
