@@ -1,3 +1,7 @@
+2022-03-15 Sam Harper
+    * tag V03-02-04
+	* bug fix: dataset paths were not properly associated when migrating
+
 2022-02-24 Sam Harper
     * tag V03-02-03
 	* bug fix: redraw gui command now works (listener wasnt updated for name change)
